---
title: Professional Class Diagram
---

classDiagram
    direction LR

    %% Define classes
    class Utilisateur {
        +id: Int
        +nom: String
        +email: String
        +role: String
        +created_at: timestamp
        +updated_at: timestamp
    }

    class Document {
        +id: Int
        +titre: String
        +chemin_fichier: String
        +date_telechargement: timestamp
        +etat_validation: String
        +created_at: timestamp
        +updated_at: timestamp
    }

    class Ressource {
        +id: Int
        +nom: String
        +type: String
        +description: String
        +created_at: timestamp
        +updated_at: timestamp
    }

    class Categorie {
        +id: Int
        +nom: String
        +description: String
        +created_at: timestamp
        +updated_at: timestamp
    }

    class Partage {
        +id: Int
        +document_id: Int
        +utilisateur_id: Int
        +date_partage: timestamp
        +niveau_permission: String
    }

    class Validation {
        +id: Int
        +formateur_id: Int
        +document_id: Int
        +etat: String
        +commentaire: String
        +date_validation: timestamp
    }

    %% Define relationships
    Utilisateur "1" --> "*" Document : "Télécharge"
    Utilisateur "1" --> "*" Partage : "Partage des documents"
    Partage "*" --> "1" Document : "Contient"
    Utilisateur "1" --> "*" Ressource : "Accède à"
    Document "1" --> "*" Categorie : "Classifie sous"
    Ressource "1" --> "*" Categorie : "Classifie sous"
    Document "1" --> "1" Validation : "Est validé par"